--- a/pom.xml
+++ b/pom.xml
@@ -260,7 +260,7 @@
     <repository>
       <id>corporate.nexus.repo</id>
       <name>MyCo Internal Repository</name>
-      <url>http://nexus:8081/nexus</url>
+      <url>http://nexus:8081/nexus/content/repositories/snapshots</url>
     </repository>
   </distributionManagement>
 
