--- a/pom.xml
+++ b/pom.xml
@@ -264,4 +264,12 @@
     </repository>
   </distributionManagement>
 
+  <servers>
+  	<server>
+		<id>corporate.nexus.repo</id>
+        <username>deployment</username>
+        <password>deployment123</password>
+    </server>
+  </servers>
+
 </project>
