--- a/pom.xml
+++ b/pom.xml
@@ -258,7 +258,7 @@
 
   <distributionManagement>
     <repository>
-      <id>corporate.nexus.repo</id>
+      <id>nexus</id>
       <name>MyCo Internal Repository</name>
       <url>http://nexus:8081/nexus/content/repositories/snapshots</url>
     </repository>
