--- a/pom.xml
+++ b/pom.xml
@@ -260,7 +260,7 @@
     <repository>
       <id>artifactory</id>
       <name>Internal Maven Repository</name>
-      <url>http://localhost:8081/artifactory</url>
+      <url>http://localhost:8081/artifactory/snapshots</url>
     </repository>
   </distributionManagement>
 
