--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,22 @@
       -->
    </properties>
 
+	<distributionManagement>
+
+		<repository>
+			<id>deployment</id>
+			<name>Internal Releases</name>
+			<url>http://localhost:8081/artifactory/releases/</url>
+		</repository>
+
+		<snapshotRepository>
+			<id>deployment</id>
+			<name>Internal Releases</name>
+			<url>http://localhost:8081/artifactory/snapshots/</url>
+		</snapshotRepository>
+
+	</distributionManagement>
+
    <dependencyManagement>
       <dependencies>
         <!-- JBoss distributes a complete set of Java EE 6 APIs including a Bill 
@@ -233,6 +249,57 @@
             </dependency>
          </dependencies>
       </profile>
+
+		<profile>
+			<!-- Create a release distribution with the right directory layout. -->
+			<!-- product build specific assembly -->
+			<id>release-dist</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/assembly.xml</descriptor>
+							</descriptors>
+						</configuration>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>1.2.1</version>
+						<executions>
+							<execution>
+								<phase>compile</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<executable>git</executable>
+							<arguments>
+								<argument>init</argument>
+							</arguments>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
       
       <profile>
          <!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
