--- a/configuration/logging.properties
+++ b/configuration/logging.properties
@@ -1,5 +1,5 @@
 # Additional loggers to configure (the root logger is always configured)        
-loggers=jacorb,com.arjuna,org.apache.tomcat.util.modeler,org.jboss.as.config,jacorb.config,sun.rmi,org.hornetq.core.server                                                              
+loggers=jacorb,com.arjuna,org.apache.tomcat.util.modeler,org.jboss.as.config,jacorb.config,sun.rmi,org.hornetq.core.server,org.jgroups.protocols.openshift.KUBE_PING                                                              
                                                                                 
 logger.level=INFO                                                               
 logger.handlers=ASYNC                                                           
@@ -26,6 +26,10 @@ logger.sun.rmi.useParentHandlers=true
 #Additional Logging for HornetQ
 logger.org.hornetq.core.server.level=DEBUG                                                       
 logger.org.hornetq.core.server.useParentHandlers=true  
+
+#Suppress KUBE PING Logs
+logger.org.jgroups.protocols.openshift.KUBE_PING.level=ERROR
+logger.org.jgroups.protocols.openshift.KUBE_PING.useParentHandlers=true
 
                                                                                 
 # Additional handlers to configure                                              
