--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,38 +1,14 @@
 # Additional loggers to configure (the root logger is always configured)
-loggers=com.arjuna,jacorb,org.jboss.as.config,org.apache.tomcat.util.modeler,sun.rmi,jacorb.config,org.hornetq.core.server,org.jgroups.protocols.openshift.KUBE_PING
+loggers=org.jboss.as.quickstarts.kitchensink
 
 logger.level=INFO
 logger.handlers=ASYNC
 
-logger.com.arjuna.level=WARN
-logger.com.arjuna.useParentHandlers=true
-
-logger.jacorb.level=WARN
-logger.jacorb.useParentHandlers=true
-
-logger.org.jboss.as.config.level=DEBUG
-logger.org.jboss.as.config.useParentHandlers=true
-
-logger.org.apache.tomcat.util.modeler.level=WARN
-logger.org.apache.tomcat.util.modeler.useParentHandlers=true
-
-logger.sun.rmi.level=WARN
-logger.sun.rmi.useParentHandlers=true
-
-logger.jacorb.config.level=ERROR
-logger.jacorb.config.useParentHandlers=true
-
-#Additional Logging for HornetQ
-logger.org.hornetq.core.server.level=DEBUG                                                       
-logger.org.hornetq.core.server.useParentHandlers=true  
-
-#Suppress KUBE PING Logs
-logger.org.jgroups.protocols.openshift.KUBE_PING.level=ERROR
-logger.org.jgroups.protocols.openshift.KUBE_PING.useParentHandlers=true
+logger.org.jboss.as.quickstarts.kitchensink.level=DEBUG
+logger.org.jboss.as.quickstarts.kitchensink.useParentHandlers=true
 
 # Additional handlers to configure
 handlers=CONSOLE
-
 
 handler.CONSOLE=org.jboss.logmanager.handlers.ConsoleHandler
 handler.CONSOLE.level=ALL
