--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -4,7 +4,7 @@ loggers=org.jboss.as.quickstarts.kitchensink
 logger.level=INFO
 logger.handlers=ASYNC
 
-logger.org.jboss.as.quickstarts.kitchensink.level=DEBUG
+logger.org.jboss.as.quickstarts.kitchensink.level=CONFIG
 logger.org.jboss.as.quickstarts.kitchensink.useParentHandlers=true
 
 # Additional handlers to configure
